# chatgpt-supercopy

./: Cargo.toml  settings.json
src/: main.rs  settings.rs
