[package]
name = "chatgpt-supercopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
enigo = "0.1.2"
futures-util = "0.3.28"
openai_dive = { version = "0.2.4", features = ["stream"] }
rdev = "0.5.2"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
