[package]
name = "chatgpt-supercopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.2.1", features = ["wayland-data-control"] }
async-openai = "0.14.3"
enigo = "0.1.3"
futures-util = "0.3.28"
rdev = "0.5.3"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
